# himalaya-tui

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: codeql.yml
himalaya_tui/: __init__.py  tui.py
